2003-04-25  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/properties.c: Escape now closes properties dialogs.

2003-04-25  Hans Breuer  <hans@breuer.org>

	* app/config.h.win32 : bump version to 0.91+cvs

	* app/makefile.msc lib/makefile.msc lib/libdia.def : updated

	* lib/dia_dirs.c : G_OS_WIN32: #define mkdir(s,a) _mkdir(s)

	* app/commands.c : don't leak "netscape" if getenv("BROWSER")
	returns NULL

	* app/presistence.c : need to #include "dia_xml_libxml.h"
	for xmlDiaParseFile

	* app/layer_dialog.c : make delayed creation work by protecting
	all non static layer_dialog_*() with :
	   if (layer_dialog == NULL || layer_dialog->dialog == NULL)
	     create_layer_dialog();
	* app/app_procs.c : removed /* create_layer_dialog(); */

	* objects/uml/association.c : give it a minimal StdProp
	implementation to fix bug #108896
	* lib/object_defaults.c : don't try to copy props if there
	is no obj->ops->describe_props

2003-04-24  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/standard/image.c (image_create): 
	* objects/standard/ellipse.c (ellipse_create): 
	* objects/standard/box.c (box_create): 
	* objects/flowchart/ellipse.c (ellipse_create): 
	* objects/flowchart/diamond.c (diamond_create): 
	* objects/flowchart/box.c (box_create): 
	* objects/custom/custom_object.c (custom_create): 
	* objects/ER/relationship.c (relationship_create): 
	* objects/ER/entity.c (entity_create): 
	* objects/ER/attribute.c (attribute_create): Initialize
	elem->height to DEFAULT_HEIGHT instead of DEFAULT_WIDTH.

	* lib/dia_svg.c (dia_svg_parse_style): Added case to set center
	alignment. 

	* configure.in: 
	* plug-ins/Makefile.am: 
	* plug-ins/xslt/Makefile.am: 
	* plug-ins/xslt/xslt.c (dia_plugin_init): 
	Patch from Götz Waschk <waschk@informatik.uni-rostock.de> uses
	automake-style if to only include xslt dir when needed.  Works
	with automake 1.4 and up, at least.

2003-04-22  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/diasvgrenderer.c (draw_string): 